# TULIP-DevBoard

./: .gitignore  BOM DevBoard.xlsx  CHEAT_SHEET.md  CMakeLists.txt  HEPAX_4H.MOD  LIBRARY4-MAXX.MOD  LICENSE  OSX_BS4X.MOD  README.md  TULIP4041 RELEASE NOTES.txt  TULIP4041.code-workspace  USER_MANUAL.md  XOSX_BS4X.MOD  cdc_helper.h  cli-binding.c  cli-binding.h  embedded_cli.c  emulation.cpp  emulation.h  ffmanager.cpp  fram.c  fram.h  globalsettings.h  hp41_pio.pio  hw_config.c  modfile.h  module.cpp  msc_device_disk.c  peripherals.cpp  peripherals.h  powermodes.h  rosc.cpp  sdcard.cpp  tracer.cpp  tracer.h  tulip4041.cpp  tulip4041.uf2  tulip4041_00.01.04B-Pico2.uf2  usb-descriptors.cpp  userinterface.cpp  (+1 more)
Firmware 0.96/: tulip4041_devboard.uf2  tulip4041_module.uf2
Firmware 0.97/: USER_MANUAL.md  cdc_helper.cpp  cdc_helper.h  cli-binding.h  embed_roms.h  embedded_cli.c  emulation.cpp  ffmanager.cpp  globalsettings.cpp  hpinterface_hardware.h  i2c_devices.cpp  i2c_devices.h  modfile.h  module.cpp  peripherals.h  pico2.h  pio_uart.c  pio_uart.h  powermodes.h  rosc.h  sdcard.cpp  sdcard.h  tracer.h  tulip.h  tulip4041_devboard.uf2  tulip4041_module.uf2  usb-descriptors.cpp  userinterface.cpp  userinterface.h
Firmware 0.97b/: tulip4041_devboard.uf2  tulip4041_module.uf2
Firmware 0.98/: tulip4041_devboard.uf2  tulip4041_module.uf2
Firmware 0.98b/: tulip4041_devboard.uf2  tulip4041_module.uf2
Firmware 0.990/: tulip4041_devboard.uf2  tulip4041_module.uf2
ROM+MOD Files/: HEPAX-4HT.MOD  HEPAX_4HT.MOD  HEPRAM-16K.MOD  HEPRAM-4K.MOD  HEPRAM-8K.MOD  LIBRARY4-CX.MOD  OSX-BS4X-CV-LIB4.MOD  OSX-BS4X-CVP6.MOD  OSX-BS4X-CVP7.MOD  OSX-BS4X-CXP6.MOD  OSX-BS4X-CXP7.MOD  OSX_BS4X-LIB4.MOD  OSX_BS4X.MOD  QROM-8K.MOD  README.MD  README.md
Source/: CHEAT_SHEET.md  CMakeLists.txt  TULIP4041 COPYRIGHT.txt  TULIP4041 RELEASE NOTES.txt  TULIP4041.code-workspace  cdc_helper.cpp  cdc_helper.h  cli-binding.c  cli-binding.h  embedded_cli.c  embedded_cli.h  emulation.cpp  emulation.h  fram.c  fram.h  globalsettings.h  hp41_defs.h  hp41_pio.pio  hpinterface_hardware.h  i2c_devices.cpp  memmap_custom.ld  module.h  peripherals.cpp  peripherals.h  pio_uart.pio  tracer.cpp  tracer.h  tulip4041.cpp  tusb_config.h  userinterface.cpp  userinterface.h
TULIP4041-DevBoard-Source/: CMakeLists.txt  README.md  cdc_helper.cpp  cli-binding.c  cli-binding.h  embedded_cli.c  emulation.cpp  ffmanager.cpp  ffmanager.h  fram.c  globalsettings.cpp  globalsettings.h  hp41_pio.pio  hpinterface_hardware.h  hw_config.c  makelist old  module.h  msc_device_disk.c  peripherals.cpp  powermodes.cpp  sdcard.cpp  sdcard.h  testcpp.c  testcpp.h  tulip4041.cpp  usb-descriptors.cpp  userinterface.cpp  userinterface.h
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/: README.md  library.json
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/include/: FatFsSd.h  FatFsSd_C.h
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/include/FsLib/: FsFile.cpp  FsFile.h  FsFormatter.h  FsLib.h  FsVolume.h
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/include/iostream/: ArduinoStream.h  StdioStream.h  ios.h  istream.h
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/: CMakeLists.txt
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/ZuluSCSI-firmware/: LICENSE  README.md
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/include/: crash.h  f_util.h  ffconf.h  my_debug.h  rtc.h
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/: sd_card.c
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SDIO/: SdioCard.h  rp2040_sdio.c  rp2040_sdio.h  sd_card_sdio.c
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SPI/: crc.c  crc.h  my_spi.h  sd_card_spi.c  sd_card_spi.h  sd_spi.c
TULIP4041-DevBoard-Source/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/src/: ff_stdio.c  glue.c  my_debug.c  rtc.c
TULIP4041-P2/: CMakeLists.txt  README.md  TULIP4041 COPYRIGHT.txt  TULIP4041 RELEASE NOTES.txt  TULIP4041.code-workspace  cdc_helper.cpp  cdc_helper.h  cli-binding.c  cli-binding.h  custom.ld  embedded_cli.c  embedded_cli.h  emulation.cpp  emulation.h  ffmanager.cpp  ffmanager.h  fram.c  fram.h  globalsettings.cpp  globalsettings.h  hp41_defs.h  hp41_pio.pio  hpinterface_hardware.h  hw_config.c  i2c_devices.cpp  modfile.h  module.cpp  module.h  sdcard.h  (+13 more)
(+150 files in other folders)
